k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: catalant-signal
  labels:
    app.kubernetes.io/name: ct-signal
    app.kubernetes.io/part-of: signal
    catalant-com-tls: "true"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
