k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ct-signal
  namespace: catalant-signal
  labels:
    app.kubernetes.io/name: ct-signal
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "ct-signal"}'
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ct-signal
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
